--- a/webapp/src/main/webapp/services.html
+++ b/webapp/src/main/webapp/services.html
@@ -42,9 +42,9 @@
                     <button id="nav-trigger" class="nav-trigger ion-android-menu"></button>
                     <nav class="main-nav">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="index.jsp">Home</a></li>
                             <li class="active"><a href="services.html">Services</a></li>
-                            <li><a href="drivers.html">Drivers</a></li>
+                 <!--       <li><a href="drivers.html">Drivers</a></li>
                             <li><a href="cars.html">Cars</a></li>
                             <li><a href="garage.html">Garage</a></li>
                             <li><a href="locations.html">Locations</a></li>
@@ -63,7 +63,7 @@
                                             <li><a href="#!">Third Level 3</a></li>
                                         </ul>
                                     </li>
-                                </ul>
+                                </ul> -->
                             </li>
                         </ul>
                     </nav>
